--- a/index.html
+++ b/index.html
@@ -25,24 +25,61 @@
     </nav>
 
     <main>
-        <div class="cos">
+
+        <div class="bloc1">
             <div><h1 class="title">Falta un minut per les dues</h1></div>
             <div><h2>19 de maig de 2025</h2><div>
         </div>
 
-        <div>
+        <div class="bloc2">
             <h3>Que és horatalanana.cat?</h3>
             <p>Aquesta pàgina està pensada per ensenyar la manera tradicional de dir l’hora en català. En català, no expressem l’hora minut a minut, sinó que utilitzem un sistema basat en quarts d’hora.</p>
             <p>🕰️ Per exemple:</p>
             <ul>
                 <li>10:15 → Un quart d’onze</li>
-                <li></li>
+                <li>12:30 → Dos quarts d’una</li>
+                <li>19:52 → Tres quarts i set minuts de vuit</li>
             </ul>
+            <a>➡️ [Descobreix la història i les variacions en la nostra llengua.]</a>
         </div>
 
-        
+        <div class="bloc3">
+            <br>
+            <p>Benvolguts amants del català i de les hores en la nostra preciosa llengua! Si us plau, ajudeu-nos a fer créixer aquest projecte tan especial.</p>
+            <br>
+            <p>Amb la vostra generositat, podrem continuar difonent i ensenyant com dir correctament les hores en català. Qualsevol petita donació serà molt apreciada i ens motivarà a seguir millorant i oferint nous continguts.</p>
+            <br>
+            <p>Si voleu col·laborar, podeu fer una donació a través de Bizum amb facilitat. Simplement envieu la vostra aportació al nostre número de telèfon 622207731.</p>
+            <br>
+            <p>Cada donació compta i ens ajudarà a continuar compartint aquest coneixement i a seguir creixent. Agraïm de tot cor el vostre suport i per ser part de la nostra comunitat.</p>
+            <br>
+            <p>Moltes gràcies per la vostra generositat i per ajudar-nos a fer d’aquest projecte una realitat viva i útil per a tothom! Seguim endavant junts!</p>
+            <br>
+        </div>
 
     </main>
+
+    <footer>
+
+        <div class="peu1">
+            <img src="" alt="logo2">
+            <h2>HORACATALANA.CAT</h2>
+            <a href="https://www.bylit.cat/" target="_blank">
+                <img src="" alt="By Lit Studio Lab">
+            </a>
+        </div>
+
+        <div class="peu2">
+            <a>Avís legal</a>
+            <a>Política de privacitat</a>
+            <a>Política de cookies</a>
+        </div>
+
+        <div class="peu3">
+            <p>2025 © horacatalana.cat. Tots els drets reservats | Creat per <a href="https://www.bylit.cat/" target="_blank">ByLit Studio Lab</a></p>
+        </div>
+
+    </footer>
     
 </body>
 </html>
